--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # configuracao do bd
-quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = postgres
-quarkus.datasource.password = aluno
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres
+# quarkus.datasource.db-kind = postgresql
+# quarkus.datasource.username = postgres
+# quarkus.datasource.password = aluno
+# quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 # quarkus.hibernate-orm.database.generation=update
