--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,26 @@
 # configuracao do bd
-quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = topicos1
-quarkus.datasource.password = 123456
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/topicos1db
+#quarkus.datasource.db-kind = postgresql
+#quarkus.datasource.username = topicos1
+#quarkus.datasource.password = 123456
+#quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/topicos1db
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.datasource.db-kind = mariadb
+quarkus.datasource.username = root
+quarkus.datasource.password = 123456
+quarkus.datasource.jdbc.url = jdbc:mariadb://localhost:3306/ecommerce_infotechdb
+
+quarkus.hibernate-orm.database.generation=update
+
 
 # configuracao do jwt
 mp.jwt.verify.publickey.location=token/publicKey.pem
 mp.jwt.verify.issuer=unitins-jwt
 smallrye.jwt.sign.key.location=token/privateKey.pem
+
+
+#Configuracao de log em arquivo
+quarkus.log.file.enable=true
+quarkus.log.file.path=/tmp/trace.log
+quarkus.log.file.level=TRACE
+quarkus.log.file.format=%d{dd-MM-yyyy HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.file.rotation.file-suffix=.dd-MM-yyyy-HH-mm
