--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.datasource.username = root
 quarkus.datasource.password = 123456
 quarkus.datasource.jdbc.url = jdbc:mariadb://localhost:3306/ecommerce_infotechdb
 
-quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=drop-and-create
 
 
 # configuracao do jwt
