--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,8 @@
 # configuracao do bd
-#quarkus.datasource.db-kind = postgresql
-#quarkus.datasource.username = topicos1
-#quarkus.datasource.password = 123456
-#quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/topicos1db
-
-quarkus.datasource.db-kind = mariadb
-quarkus.datasource.username = root
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = topicos1
 quarkus.datasource.password = 123456
-quarkus.datasource.jdbc.url = jdbc:mariadb://localhost:3306/ecommerce_infotechdb
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/ecommerce_infotechdb
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 
